--- a/health_web/src/main/webapp/pages/ordersetting.html
+++ b/health_web/src/main/webapp/pages/ordersetting.html
@@ -136,10 +136,53 @@
             },
             created: function () {//在vue初始化时调用
                 this.initData(null);
+                this.getDataByMonth();
             },
             methods: {
+                //发送ajax请求，根据当前页面对应的月份查询预约设置信息
+                getDataByMonth(){
+                    axios.post("/ordersetting/getOrderSettingByMonth.do?date="+this.currentYear+"-"+this.currentMonth).then(res=>{
+                        if(res.data.flag){
+                            this.leftobj = res.data.data;
+                            this.$message({
+                                message:res.data.message,
+                                type:"success"
+                            })
+                        }else{
+                            this.$message.error(res.data.message);
+                        }
+                    })
+                },
 				//预约设置
                 handleOrderSet(day){
+                    //alert(day);
+                    this.$prompt('请输入可预约人数', '预约设置', {
+                        confirmButtonText: '确定',
+                        cancelButtonText: '取消',
+                        inputPattern: /^[0-9]*[1-9][0-9]*$/,
+                        inputErrorMessage: '只能输入正整数'
+                    }).then(({ value }) => {
+                        //发送ajax请求根据日期修改可预约人数
+                        axios.post("/ordersetting/editNumberByDate.do",{
+                            orderDate:this.formatDate(day.getFullYear(),day.getMonth()+1,day.getDate()), //日期
+                            number:value   //可预约人数
+                        }).then((response)=>{
+                            if(response.data.flag){
+                                this.createdData();
+                                this.$message({
+                                    type: 'success',
+                                    message: response.data.message
+                                });
+                            }else{
+                                this.$message.error(response.data.message);
+                            }
+                        });
+                    }).catch(() => {
+                        this.$message({
+                            type: 'info',
+                            message: '已取消'
+                        });
+                    });
                 },
 				//上传之前进行文件格式校验
                 beforeUpload(file){
